# music-recommendation

./: .gitignore  main.py  pyproject.toml
project/: ROADMAP.md
project/scratch/: parse_experiment.py
study/: 01-overview.md  02-similarity.md  03-evaluation.md  04-content-based.md  05-collaborative-memory.md  06-collaborative-model.md  07-hybrid.md  08-implicit-feedback.md  09-deep-learning.md  10-sequence.md  11-context-aware.md  12-cold-start.md  13-scalability.md  14-fairness.md  15-system-design.md  16-repo-management.md  index.md
til/2026-04/: 11-html-parsing-library.md  11-initial-dependencies.md  11-project-structure-decision.md  13-beautifulsoup-and-pathlib.md  13-parsing-one-record-step-by-step.md  13-python-builtin-collections.md  13-regex-basics.md  13-string-methods.md  13-type-hints.md  13-with-open-pattern.md
